from domain.annuity_calculator import AnnuityCalculator


class AnnuityService:
    def__